--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,28 +6,28 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>AngularJS SnorQL</title>
 
-   <base href="/"/>
+   <base href="{!distBase!}" />
 
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="css/vendor.css">
+  <link rel="stylesheet" href="DIGEST(css/vendor.css)">
 
   <!-- codemirror -->
   <link rel="stylesheet" type="text/css" href="//codemirror.net/lib/codemirror.css"/>
   <link rel="stylesheet" type="text/css" href="//codemirror.net/theme/twilight.css"/>
 
   <!-- application -->
-  <link rel="stylesheet" href="css/app.css" />
+  <link rel="stylesheet" href="DIGEST(css/app.css)" />
 
 
   <!-- Latest compiled and minified JavaScript -->
-  <script src="js/vendor.js"></script>
+  <script src="DIGEST(js/vendor.js)"></script>
 
   <script src="//codemirror.net/lib/codemirror.js"></script>
   <script src="//codemirror.net/mode/sparql/sparql.js"></script>
   <script src="//rawgithub.com/angular-ui/ui-codemirror/bower/ui-codemirror.min.js"></script>
   
   <!-- application script -->
-  <script src="js/app.js"></script>
+  <script src="DIGEST(js/app.js)"></script>
 </head>
 
 <body>
