--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -30,7 +30,7 @@
   <script src="DIGEST(js/app.js)"></script>
 </head>
 
-<body>
+<body ng-controller="SnorqlCtrl">
 
    <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="">
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><i class="glyphicon glyphicon-cloud pink"></i> SnorQL </a>
+          <a class="navbar-brand" ng-href="{{home}}"><i class="glyphicon glyphicon-cloud pink"></i> SnorQL </a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -70,7 +70,7 @@
     </div>
 
 
-    <div ng-view ng-controller="SnorqlCtrl">
+    <div ng-view>
     </div>
 
 </body>
