--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -52,7 +52,7 @@
           <ul class="nav navbar-nav">
             <li><a href="#about">About</a></li>
             <li><a href="/doc">Help</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact">Contact ({{pushState}})</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
