--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -9,10 +9,10 @@
    <base href="{!distBase!}" />
 
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="DIGEST(css/vendor.css)">
+  <link rel="stylesheet" href="css/vendor.css?release={!distRelease!}">
 
   <!-- application -->
-  <link rel="stylesheet" href="DIGEST(css/app.css)" />
+  <link rel="stylesheet" href="css/app.css?release={!distRelease!}" />
 
   <script>
 
@@ -20,19 +20,21 @@
     // global settings for angular-nexprot-ui-help
     var npHelpSettings={
         // baseUrl:"http://uat-web2:8080",
-        helpUrl:'rdfhelp.json',
-        root:'doc',
-        pages:['doc/home','doc/faq','doc/entity']
+        helpPath:'rdfhelp.json',
+        helpTitle:'Main truc',
+        root:'page', // specify the root of RDF entity routes
+        githubRepo:'aerobatic/markdown-content',
+        githubToken:'2e36ce76cfb03358f0a38630007840e7cb432a24'
     }    
   </script>
 
   <!-- Latest compiled and minified JavaScript -->
-  <script src="DIGEST(js/vendor.js)"></script>
+  <script src="js/vendor.js?release={!distRelease!}"></script>
 
   <script src="//codemirror.net/mode/sparql/sparql.js"></script>
   
   <!-- application script -->
-  <script src="DIGEST(js/app.js)"></script>
+  <script src="js/app.js?release={!distRelease!}"></script>
 </head>
 
 <body ng-controller="SnorqlCtrl">
@@ -51,8 +53,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="#about">About</a></li>
-            <li><a href="/doc">Help</a></li>
-            <li><a href="#contact">Contact ({{pushState}})</a></li>
+            <li><a href="/page">Help</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
