--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -14,20 +14,9 @@
   <!-- application -->
   <link rel="stylesheet" href="css/app.css?release={!distRelease!}" />
 
-  <script>
-
-    //
-    // global settings for angular-nexprot-ui-help
-    var npHelpSettings={
-        // baseUrl:"http://uat-web2:8080",
-        helpPath:'rdfhelp.json',
-        helpTitle:'Main truc',
-        root:'page', // specify the root of RDF entity routes
-        githubRepo:'calipho-sib/nextprot-docs',
-        githubToken:'2e36ce76cfb03358f0a38630007840e7cb432a24'
-    }    
+  <script type="text/javascript">
+    var npHelpSettings={}
   </script>
-
   <!-- Latest compiled and minified JavaScript -->
   <script src="js/vendor.js?release={!distRelease!}"></script>
 
@@ -52,7 +41,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
+            <li><a ng-href="/page/title/about">About</a></li>
             <li><a href="/page">Help</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -80,6 +69,11 @@
 
     <div ng-view>
     </div>
+    <hr>
+    <footer>
+      <p>&copy; CALIPHO @ SIB 2014</p>
+      <p><a ng-href="page/title/about">About</a></p>
+    </footer>
 
 </body>
 
