--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -2,11 +2,11 @@
 <html ng-app="snorql">
 
 <head>
-   <meta charset="utf-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>AngularJS SnorQL</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>AngularJS SnorQL</title>
 
-   <base href="{!distBase!}" />
+  <base href="{!distBase!}" />
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="css/vendor.css?release={!distRelease!}">
@@ -15,66 +15,72 @@
   <link rel="stylesheet" href="css/app.css?release={!distRelease!}" />
 
   <script type="text/javascript">
-    var npHelpSettings={}
+  var npHelpSettings={}
   </script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="js/vendor.js?release={!distRelease!}"></script>
 
   <script src="//codemirror.net/mode/sparql/sparql.js"></script>
-  
+
   <!-- application script -->
   <script src="js/app.js?release={!distRelease!}"></script>
 </head>
 
 <body ng-controller="SnorqlCtrl">
 
-   <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" ng-href="{{home}}"><i class="glyphicon glyphicon-cloud pink"></i> SnorQL </a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a ng-href="/page/title/about">About</a></li>
-            <li><a href="/page">Help</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!-- /.nav-collapse -->
-      </div><!-- /.container -->
-    </div><!-- /.navbar -->
 
-    <div class="nav-menu hide" >
-          <div class="list-group">
-            <a href="#" class="list-group-item active">
-              <h4 class="list-group-item-heading">List group item heading</h4>
-              <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-            </a>
-            <a href="#" class="list-group-item">
-              <h4 class="list-group-item-heading">List group item heading</h4>
-              <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-            </a>
-            <a href="#" class="list-group-item">
-              <h4 class="list-group-item-heading">List group item heading</h4>
-              <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-            </a>
-          </div>      
+  <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+    <div class="">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" ng-href="{{home}}"><i class="glyphicon glyphicon-cloud pink"></i> SnorQL </a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a ng-href="/page/title/about">About</a></li>
+          <li><a href="/page">Help</a></li>
+          <li><a target="_blank" href="https://github.com/calipho-sib/nextprot-snorql">GitHub fork</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div><!-- /.nav-collapse -->
+    </div><!-- /.container -->
+  </div><!-- /.navbar -->
+
+  <div class="nav-menu hide" >
+    <div class="list-group">
+      <a href="#" class="list-group-item active">
+        <h4 class="list-group-item-heading">List group item heading</h4>
+        <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      </a>
+      <a href="#" class="list-group-item">
+        <h4 class="list-group-item-heading">List group item heading</h4>
+        <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      </a>
+      <a href="#" class="list-group-item">
+        <h4 class="list-group-item-heading">List group item heading</h4>
+        <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+      </a>
     </div>
+  </div>
 
 
-    <div ng-view>
-    </div>
-    <hr>
-    <footer>
-      <p>&copy; CALIPHO @ SIB 2014</p>
-      <p><a ng-href="page/title/about">About</a></p>
-    </footer>
+
+  <div ng-view>
+  </div>
+  <hr>
+  <footer>
+    <p>&copy; CALIPHO @ SIB 2014</p>
+    <p><a ng-href="page/title/about">About</a></p>
+  </footer>
+
+
 
 </body>
+
 
 </html>
