--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -100,7 +100,7 @@
     <div class="row">
         <div class="col-md-4">
           <ul class="nav nav-pills nav-stacked">
-            <li><a href="/pages/legal-disclaimer">Terms of Service</a></li>
+            <li><a href="/pages/legal-disclaimer">Legal disclaimer</a></li>
           </ul>
         </div>
         <div class="col-md-4">
@@ -110,7 +110,7 @@
         </div>
         <div class="col-md-4">
           <ul class="nav nav-pills nav-stacked">
-            <li><a href="https://github.com/calipho-sib/nextprot-snorql" target="_blank">GitHub fork</a></li>
+            <li><a href="https://github.com/calipho-sib/nextprot-snorql" target="_blank"><i class="icon-github"></i>For developers</a></li></a></li>
           </ul>
         </div>
       </div>
