Change banner color in lavender (snorql color) creating a new css file

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -29,7 +29,7 @@
 <body ng-controller="SnorqlCtrl">
 
 
-  <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+  <div class="navbar navbar-fixed-top navbar-snorql" role="navigation">
     <div class="">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
