--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -57,8 +57,8 @@
               <li ng-class=""><a href="{{'api' | getNeXtProtUrl}}">API</a></li>
             </ul>
           </li>
-          <li><a href="/page">Help</a></li>
-          <li><a ng-href="/page/title/about">About</a></li>
+            <li><a href="/help/introduction">Help</a></li>
+            <li><a ng-href="/about">About</a></li>
           <li><a href="mailto:support@nextprot.org?subject=[neXtProt%20SnorQL]">Contact us</a></li>
         </ul>
         </ul>
