Fix legal-disclaimer and copyright links

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -107,8 +107,8 @@
     <hr>
     <footer>
       <p><a target="_blank" href="https://github.com/calipho-sib/nextprot-snorql">GitHub fork</a></p>
-      <p><a href="/pages/legal-disclaimer">Terms of Service</a></p>
-      <p><a href="/pages/copyright">&copy; SIB 2015</a></p>
+      <p><a href="/legal-disclaimer">Terms of Service</a></p>
+      <p><a href="/copyright">&copy; SIB 2015</a></p>
 
   </footer>
   -->
@@ -118,12 +118,12 @@
     <div class="row">
         <div class="col-md-4">
           <ul class="nav nav-pills nav-stacked">
-            <li><a href="/pages/legal-disclaimer">Legal disclaimer</a></li>
+            <li><a href="/legal-disclaimer">Legal disclaimer</a></li>
           </ul>
         </div>
         <div class="col-md-4">
           <ul class="nav nav-pills nav-stacked">
-            <li><a href="/pages/copyright">&copy; 2015 SIB</a></li>
+            <li><a href="/copyright">&copy; 2015 SIB</a></li>
           </ul>
         </div>
         <div class="col-md-4">
