Adding module version like in nextprot-ui

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -82,6 +82,8 @@
     </div><!-- /.container -->
   </div><!-- /.navbar -->
 
+  <div>v<span sq-version></span>-<span sq-build></span></div>
+
   <div class="nav-menu hide" >
     <div class="list-group">
       <a href="#" class="list-group-item active">
