--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -42,7 +42,6 @@
         <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-cloud pink"></span> neXtProt SnorQL</a>
       </div>
 
-
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
 
@@ -82,7 +81,7 @@
     </div><!-- /.container -->
   </div><!-- /.navbar -->
 
-  <div>v<span sq-version></span>-<span sq-build></span></div>
+  <div>Version: <span sq-version></span><br>Build: #<span sq-build></span></div>
 
   <div class="nav-menu hide" >
     <div class="list-group">
