Format version (build number)

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -81,7 +81,7 @@
     </div><!-- /.container -->
   </div><!-- /.navbar -->
 
-  <div>Version: <span sq-version></span><br>Build: #<span sq-build></span></div>
+  <div>Version: <span sq-version></span> (build <span sq-build></span>)</div>
 
   <div class="nav-menu hide" >
     <div class="list-group">
