--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -81,8 +81,6 @@
     </div><!-- /.container -->
   </div><!-- /.navbar -->
 
-  <div>Version: <span sq-version></span> (build <span sq-build></span>)</div>
-
   <div class="nav-menu hide" >
     <div class="list-group">
       <a href="#" class="list-group-item active">
@@ -117,22 +115,31 @@
   <footer class="container text-center small">
     <hr/>
     <div class="row">
-        <div class="col-md-4">
+      <div class="col-lg-12">
+        <div class="col-md-3">
           <ul class="nav nav-pills nav-stacked">
             <li><a href="/legal-disclaimer">Legal disclaimer</a></li>
           </ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <ul class="nav nav-pills nav-stacked">
             <li><a href="/copyright">&copy; 2015 SIB</a></li>
           </ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <ul class="nav nav-pills nav-stacked">
-            <li><a href="https://github.com/calipho-sib/nextprot-snorql" target="_blank"><i class="icon-github"></i>For developers</a></li></a></li>
+            <li><a href="https://github.com/calipho-sib/nextprot-snorql" target="_blank"><i class="icon-github"></i>For
+              developers</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <ul class="nav nav-pills nav-stacked">
+            <li><a href="https://github.com/calipho-sib/nextprot-snorql/releases" target="_blank"><i
+                    class="icon-tag"></i>Version: <span sq-version></span> (build <span sq-build></span>)</a></li>
           </ul>
         </div>
       </div>
+    </div>
     <hr/>
   </footer>
 
