--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -134,8 +134,8 @@
         </div>
         <div class="col-md-3">
           <ul class="nav nav-pills nav-stacked">
-            <li><a href="https://github.com/calipho-sib/nextprot-snorql/releases" target="_blank"><i
-                    class="icon-tag"></i>Version: <span sq-version></span> (build <span sq-build></span>)</a></li>
+            <li><a href="https://github.com/calipho-sib/nextprot-snorql/releases" target="_blank">
+              <i class="icon-tag"></i>Version: <span sq-build-version></span></a></li>
           </ul>
         </div>
       </div>
