--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -25,6 +25,26 @@
   <!-- application script -->
   <script src="js/app.js?release={!distRelease!}"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+  <!-- Google Analytics -->
+  <!-- Asynchronously loads the analytics.js library onto this page -->
+  <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })
+        (window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        // The ga() function provides a single access point for everything in the analytics.js library
+        // all tracking calls are made via the ga() function
+
+        // Creates a new default tracker object
+        ga('create', 'UA-61448300-1', 'auto');
+
+        // Sends a first pageview hit for the current page to Google Analytics
+        ga('send', 'pageview');
+    </script>
+  <!-- End Google Analytics -->
 </head>
 
 <body ng-controller="SnorqlCtrl">
