--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -48,7 +48,7 @@
           <!-- Ressources -->
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-               aria-expanded="false">Resources <span class="caret"></span></a>
+               aria-expanded="false">Services <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <!-- Learn -->
               <li ng-class=""><a href="{{'search' | getNeXtProtUrl}}" ng-click="routingOutside('ui')">Search</a></li>
