--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -56,8 +56,8 @@
               <li ng-class=""><a href="{{'api' | getNeXtProtUrl}}" ng-click="routingOutside('api')">API</a></li>
             </ul>
           </li>
-            <li><a href="/help/doc/introduction">Help</a></li>
-            <li><a ng-href="/about">About</a></li>
+          <li><a href="/help/doc/introduction">Help</a></li>
+          <li><a ng-href="/nextprot">About</a></li>
           <li><a href="mailto:support@nextprot.org?subject=[neXtProt%20SnorQL]">Contact us</a></li>
         </ul>
         </ul>
