--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
   <title>neXtProt SnorQL</title>
 
   <base href="{!distBase!}" />
