update SNORQL typo

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -62,7 +62,7 @@
           </li>
           <li><a href="/help/doc/introduction">Help</a></li>
           <li><a ng-href="/nextprot">About</a></li>
-          <li><a href="mailto:support@nextprot.org?subject=[neXtProt%20SnorQL]">Contact us</a></li>
+          <li><a href="mailto:support@nextprot.org?subject=[neXtProt%20SNORQL]">Contact us</a></li>
         </ul>
         </ul>
         <ul class="nav navbar-nav navbar-right">
